	* fixed finding first para bounds with complex mode if the first para is a 
	new fast saved chunk (i think)
	* ffn sttbf was wrong for word95 & word6, is fixed now.
	* Squashed one the bugs that was causing one of my annoying problems with 
	complex files and incorrect para fcLims. This one was driving me completely mad,
	i don't know if i have fixed it fully correct though, but i think so..
ALL TODO
	* fix files in broken
	* search for SEP sprm diffs between 6 and 8
	* add in the list extraction code ?

	* install cygwin thingy at home and test configure mechanism for searching and
	installing strcasecmp/rint.

	* handle char props in the abi and html standalone converters

	* table properties & lists to be done

	* i figured out what the story is with ole embedded files, ill have to modify
	my ole code so as to be able in the future to parse embedded docs and splice
	them together, which could be a wee bit of a challenge.
	

	* modify configure script so its possible to link against a different expat
	lib, or to disable it or something.
	* add errors via numbered errors to wvInitParser.

	* harden wvConfig against bad pointers, and incomplete sections e.g justification
	* make wvConvert read config from commandline, and 
	* additional code checks for conversion of codepage whatever to iso for
	ancillary strings that might be stored in that format.
	* modify complex code to stop at end of main text
	* do sep and anlv

	* i have Plcfbte's marked as generic empty structures in the old code, which 
	is technically incorrect but works the way i've set up the code to handle it.
	* wvToggle is wrong im sure.
	* the old ffffffff list problem still exists with the new interface, i must 
	finally kill that issue once and for all
	* colspan support, find the smallest common unit, and restart the
	table handling.
	* rowspan support
	* add a fudge factor to the gcf part so as to fudge out insignificent
	twip differences

	4 table rowspan/colspan support
