@@ -50,6 +50,7 @@ Changes to to 0.5.21
 	* Squashed one the bugs that was causing one of my annoying problems with 
 	complex files and incorrect para fcLims. This one was driving me completely mad,
 	i don't know if i have fixed it fully correct though, but i think so..
+	* changed laolareplace.old.c to put isprint test at the end.
 ALL TODO
 	* fix files in broken
 	* search for SEP sprm diffs between 6 and 8
